--- a/src/assets/styles/helper.scss
+++ b/src/assets/styles/helper.scss
@@ -5,3 +5,21 @@ $font-song: Georgia, "Nimbus Roman No9 L", "Songti SC", "Noto Serif CJK SC", "So
 
 // 颜色
 $color-highlight: #f00;
+
+// placeholder
+%clearFix {
+  &::after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+}
+
+$color-shadow: rgba(0,0,0,0.25);
+%outerShadow {
+  box-shadow: 0 0 3px $color-shadow;
+}
+%innerShadow {
+  box-shadow: inset 0 -3px 3px -3px fade_out($color-shadow,0),
+              inset 0 3px 3px -3px fade_out($color-shadow,0);
+}
